Edited settings, ServerModule1, admin and Regler

--- a/anvil.yaml
+++ b/anvil.yaml
@@ -85,7 +85,7 @@ db_schema:
     client: none
     columns:
     - admin_ui: {order: 0, width: 200}
-      name: nr
+      name: nummer
       type: number
     - admin_ui: {order: 1, width: 200}
       name: uke_mandag
