--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -528,7 +528,7 @@ components:
     - event_bindings: {click: trekning_button_click}
       layout_properties: {}
       name: trekning_button
-      properties: {background: 'theme:Secondary Container', role: elevated-button, text: Trekningsliste}
+      properties: {background: 'theme:Secondary Container', role: elevated-button, text: Trekning}
       type: Button
     - event_bindings: {click: admin_button_click}
       name: admin_button
