--- a/client_code/Supertrekning/form_template.yaml
+++ b/client_code/Supertrekning/form_template.yaml
@@ -2,7 +2,7 @@ components:
 - components:
   - layout_properties: {grid_position: 'MTSGUN,FHFTBQ'}
     name: label_1
-    properties: {align: center, text: Dette er de som har kvalifisert seg til trekning for den aktuelle uken}
+    properties: {align: center, text: Dette er de som har kvalifisert seg til alle trekninger frem til nå}
     type: Label
   - components:
     - name: trekningsliste_repeating_panel
