--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -7,7 +7,7 @@ components:
   - layout_properties: {grid_position: 'YACQLQ,HZIOYW'}
     name: text_area_10
     properties:
-      text: "14/4 la til tabell for lagring av trekninger\nBegrenset mulighet til å oppdatere bakover i tid. Nå kan man oppdatere inneværende uke og hvis det er mandag kan man oppdatere forrige uke. "
+      text: "14/4 Begrenset mulighet til å oppdatere bakover i tid. Nå kan man oppdatere inneværende uke og hvis det er mandag kan man oppdatere forrige uke. \nLa til liste med supertrekning - de som har klart hver uke."
     type: TextArea
   - layout_properties: {grid_position: 'LMZXMW,JKJKSY'}
     name: text_area_9
@@ -58,7 +58,11 @@ components:
     name: text_area_4
     properties:
       height: 355
-      text: "Bør kunne redigere en dag ved å klikke hvor som helst i dagen, ikke bare på poengtallet.\nNotat til bruker\nSlette tomme team hver natt\nSlette team med færre enn tre hver helg\nLagre trekninger\nLage liste over de som er med i alle trekningene\nMarkere vinnere i trekningene\nData for en uke bør ikke kunne redigeres etter mandag uken etter. Da fryses uken og trekningslisten er endelig. "
+      text: |
+        Bør kunne redigere en dag ved å klikke hvor som helst i dagen, ikke bare på poengtallet.
+        Slette tomme team hver natt
+        Slette team med færre enn tre hver helg
+        Markere vinnere i trekningene
     type: TextArea
   - event_bindings: {click: button_1_click}
     layout_properties: {grid_position: 'RUNMFH,GYRFVX'}
