--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -7,7 +7,8 @@ components:
   - layout_properties: {grid_position: 'YACQLQ,HZIOYW'}
     name: text_area_10
     properties:
-      text: "14/4 Begrenset mulighet til å oppdatere bakover i tid. Nå kan man oppdatere inneværende uke og hvis det er mandag kan man oppdatere forrige uke. \nLa til liste med supertrekning - de som har klart hver uke."
+      height: 115.33331298828125
+      text: "14/4 Begrenset mulighet til å oppdatere bakover i tid. Nå kan man oppdatere inneværende uke og hvis det er mandag kan man oppdatere forrige uke. \nLa til liste med supertrekning - de som har klart hver uke.\nLa til link i admin til lykkehjulet"
     type: TextArea
   - layout_properties: {grid_position: 'LMZXMW,JKJKSY'}
     name: text_area_9
