--- a/client_code/Regler/form_template.yaml
+++ b/client_code/Regler/form_template.yaml
@@ -1,20 +1,78 @@
 components:
 - components:
-  - components:
-    - event_bindings: {click: button_1_click}
-      layout_properties: {}
-      name: lukk_button
-      properties: {align: center, role: filled-button, text: Lukk}
-      type: Button
-    layout_properties: {grid_position: 'WHMDOQ,MGWKZE'}
-    name: rich_text_1
+  - layout_properties: {grid_position: 'KDKVGG,CXLXKV'}
+    name: label_1
+    properties: {role: display, text: Konkurranseregler}
+    type: Label
+  - layout_properties: {grid_position: 'VXATUB,SOBLWX'}
+    name: text_area_1
     properties:
-      align: left
-      content: "<!DOCTYPE html>\n<html lang=\"no\">\n<head>\n  <meta charset=\"UTF-8\">\n  <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n  <title>Framskritt – Framo Bedriftsidrettslags Aktivitetskonkurranse</title>\n  <style>\n    body {\n      font-family: Arial, sans-serif;\n      margin: 2rem;\n      background-color: #f5f5f5;\n    }\n    .container {\n      background-color: #fff;\n      padding: 1.5rem;\n      border-radius: 8px;\n      max-width: 800px;\n      margin: auto;\n      box-shadow: 0 0 10px rgba(0,0,0,0.1);\n    }\n    h2, h3 {\n      text-align: center;\n      color: #333;\n    }\n    h3 {\n      margin-top: 1.5rem;\n      font-size: 1.25em;\n    }\n    ul {\n      list-style: disc;\n      padding-left: 1.5rem;\n    }\n    p {\n      line-height: 1.6;\n      color: #666;\n    }\n  </style>\n</head>\n<body>\n  <div class=\"container\">\n    <h2>Velkommen til Framskritt</h2><h3> Framo Bedriftsidrettslags aktivitetskonkurranse!</h3>\n\n    <h3>Hvem kan delta?</h3>\n    <p>Alle medlemmer i Framo BIL er invitert til å delta.</p>\n\t<p><a href=\"https://framo-bil.idrettenonline.no/register/apply/application\" target=\"_blank\">Her kan du melde deg inn</a></p>\n\n    <h3>Premier</h3>\n    <p>Hver uke blir det trukket ut tre premier, hver på 1000 kroner.</p>\n\n    <h3>Poengsystem</h3>\n    <p>\n      Alle dokumenterbare idrettsaktiviteter teller. Deltakerne logger poeng via vårt program, med mulighet til å opptjene inntil 3 poeng per dag. Poeng gis etter følgende kriterier:\n    </p>\n    <ul>\n      <li><strong>1 poeng:</strong> 0,5 time aktiv trening eller 8000 skritt</li>\n      <li><strong>2 poeng:</strong> 1 time aktiv trening</li>\n      <li><strong>3 poeng:</strong> 1,5 time aktiv trening</li>\n    </ul>\n    <p>Det er tilstrekkelig med 1 poeng i fem dager for å være med i trekningen i den uken. Poeng utover dette påvirker ikke trekningen, men vil hjelpe laget ditt, og din personlige plassering. </p>\n\n    <h3>Konkurranseformer</h3>\n    <p><strong>Individuell konkurranse:</strong> Resultatlisten føres for hver deltaker.</p>\n    <p>\n      <strong>Lagkonkurranse:</strong> Det er mulig å melde seg på som lag (minimum 3 personer). Lagene føres på en egen resultatliste.\n    </p>\n\n\n\n    <p>Lykke til med konkurransen!</p>\n  </div>\n</body>\n</html>"
-      format: restricted_html
-    type: RichText
-  layout_properties: {grid_position: 'JKCUTA,SPCTSY'}
+      height: 66.33331298828125
+      text: |
+        Hvem kan delta?
+        Alle medlemmer i Framo BIL er invitert til å delta.
+    type: TextArea
+  - layout_properties: {grid_position: 'UYHMCL,XVTQIG'}
+    name: link_2
+    properties: {align: center, role: headline, text: Her finner du innmeldingsskjema}
+    type: Link
+  - layout_properties: {grid_position: 'SOEHOG,EQTGKX'}
+    name: text_area_2
+    properties:
+      height: 478.5555419921875
+      text: |-
+        Premier
+        Hver uke blir det trukket ut tre premier, hver på 1000 kroner. De to første vinnerne trekkes ut blant de som har klart å få ett eller flere poeng fem forskjellige dager i løpet av uken. Den tredje premien trekkes ut blant de som har klart dette hver uke så langt.
+
+        Poengsystem
+        Alle idrettsaktiviteter teller. Deltakerne logger poeng via vårt program, med mulighet til å opptjene inntil 3 poeng per dag. Poeng gis etter følgende kriterier:
+
+        1 poeng: 0,5 time aktiv trening eller 8000 skritt
+        2 poeng: 1 time aktiv trening
+        3 poeng: 1,5 time aktiv trening
+        Det er tilstrekkelig med 1 poeng i fem dager for å være med i trekningen i den uken. Poeng utover dette påvirker ikke trekningen, men vil hjelpe laget ditt, og din personlige plassering.
+
+        Konkurranseformer
+        Individuell konkurranse: Resultatlisten føres for hver deltaker.
+
+        Lagkonkurranse: Det er mulig å melde seg på som lag (minimum 3 personer). Lagene føres på en egen resultatliste. Det blir trukket ut premier til deltagerne i vinnende lag i siste trekening.
+    type: TextArea
+  layout_properties: {grid_position: 'GMGFNB,WFPWMF'}
   name: column_panel_1
+  properties: {role: tonal-card}
+  type: ColumnPanel
+- components:
+  - layout_properties: {grid_position: 'KDKVGG,CXLXKV'}
+    name: label_1_copy
+    properties: {role: display, text: Brukerveiledning}
+    type: Label
+  - layout_properties: {grid_position: 'RLCWOS,WCNFUE'}
+    name: text_area_3
+    properties:
+      height: 438.5555419921875
+      text: "Hovedbildet viser innværende uke, når konkurransen er i gang. \n\nDu kan hoppe fra uke til uke med pilene til høyre og venstre.\n\nDet er en knapp for hver dag. Du registrerer poeng på en dag ved å klikke på knappen. Du markerer da hvor mange poeng du fortjener den dagen, og kan velge et ikon. Du kan la teksten stå., eller tilpasse den. DU kan også skrive en lengre beskrivelse av økten. \nHvis du klikker på navnet ditt kommer du inn i et bilde der du kan korrigere navnet du har skrevet. Det er lurt å bruke ekte navn hvis du vil ha premie. \nI det samme bildet kan du velge å bli med i et eksisterende lag, elelr du kan opprette et nytt lag. Et lag må ha tre deltagere for å være med i konkurransen.  Lag som blir stående tomme blir slettet. \nMedlemmene i et lag kan velge å låse for nye medlemmer i laget. De kan da ikke bytte lag, og dette laget blir ikke med i listene over lag som andre kan velge. \nNår konkurransen er ca tre uker på vei blir alle lagene låst. \nKonkurransen er åpen, på den måten at alle deltagere kan se hva andre har registrert., Når du viser individuell resultatliste får de frem et øye-ikon for hver deltager. Hvis du klikker på det kan du se alle dagsøktene som den personen har registrert.\nRegistreringen av poeng er basert på tillit. Les avsnittet om poengberegning nøye. "
+    type: TextArea
+  - components:
+    - layout_properties: {grid_position: 'KDKVGG,CXLXKV'}
+      name: label_1_copy_copy
+      properties: {role: display, text: Poengberegning}
+      type: Label
+    - layout_properties: {grid_position: 'RLCWOS,WCNFUE'}
+      name: text_area_3_copy
+      properties:
+        height: 246.88885498046875
+        text: "Skritt\nHvis du har skritteller og den viser 8000 skritt på en dag kan du få ett poeng. Hvis du går lengre enn 8000 skritt på en dag har det ingen innvirkning på poeng. \n\nTreningsøkter\nHvis du registrerer annen form for trening kan du ikke registrere poeng for skritt. Du kan få ett poeng for hver halve time med aktiv trening, og maksimalt tre poeng per. dag.\n"
+      type: TextArea
+    - layout_properties: {grid_position: 'NPDRUE,NVTGLG'}
+      name: button_1
+      properties: {role: filled-button, text: Lukk}
+      type: Button
+    layout_properties: {grid_position: 'PXGGAF,ARLPSP'}
+    name: column_panel_1_copy_copy
+    properties: {role: tonal-card}
+    type: ColumnPanel
+  layout_properties: {grid_position: 'FAOPLV,GJTPCG'}
+  name: column_panel_1_copy
   properties: {role: tonal-card}
   type: ColumnPanel
 container: {type: ColumnPanel}
