--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -7,8 +7,8 @@ components:
   - layout_properties: {grid_position: 'YACQLQ,HZIOYW'}
     name: text_area_10
     properties:
-      height: 115.33331298828125
-      text: "14/4 Begrenset mulighet til å oppdatere bakover i tid. Nå kan man oppdatere inneværende uke og hvis det er mandag kan man oppdatere forrige uke. \nLa til liste med supertrekning - de som har klart hver uke.\nLa til link i admin til lykkehjulet"
+      height: 156.54547119140625
+      text: "14/4 Begrenset mulighet til å oppdatere bakover i tid. Nå kan man oppdatere inneværende uke og hvis det er mandag kan man oppdatere forrige uke. \nLa til liste med supertrekning - de som har klart hver uke.\nLa til link i admin til lykkehjulet\nNy side med regler og brukerveiledning"
     type: TextArea
   - layout_properties: {grid_position: 'LMZXMW,JKJKSY'}
     name: text_area_9
@@ -17,7 +17,7 @@ components:
   - layout_properties: {grid_position: 'LGAFYI,CCOHUH'}
     name: text_area_8
     properties:
-      height: 182.66665649414062
+      height: 207.27276611328125
       text: "12/4 Mulighet til å opprette team selv\npopup-melding når team slettes eller når team ikke slettes fordi det ikke var tomt for medlemmer\npopup-melding når bruker slettes\nKnapp i admin for å slette tomme team. (Vurderer å gjøre den automatisk daglig)\nLagt til hengelås som viser om team er låst. Bruker kan klikke på låsen og låse selv. Dette kan bare gjøre når det er minst tre deltagere på teamet. \nNå kan slå opp alle detaljene for alle via individuell resultatliste."
     type: TextArea
   - layout_properties: {grid_position: 'MOGSQP,UEYVNV'}
@@ -48,7 +48,7 @@ components:
   - layout_properties: {grid_position: 'BHFXMZ,LRACXB'}
     name: text_area_2
     properties:
-      height: 176.727294921875
+      height: 216.81820678710938
       text: "28/3-25: La inn checkboks på brukerliste i admin for å kunne gi admintilgang til brukere\nLaget endringslogg\nLink til innmeldingsskjema i siden med Regler\nRettet feil i trekningsliste. Den inkluderte deltagere som hadde hatt fem dager og avregistrert dager sånn at de ikke skal være med likevel. \nVisuelle enringer\n"
     type: TextArea
   - layout_properties: {grid_position: 'LAFSXU,NDNNGT'}
