--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -496,6 +496,10 @@ components:
       name: flow_panel_6
       properties: {align: center}
       type: FlowPanel
+    - layout_properties: {}
+      name: coach
+      properties: {text: ''}
+      type: TextArea
     layout_properties: {grid_position: 'LVOPXY,MUNUHX'}
     name: week_row_panel
     properties: {}
