Edited settings and ServerModule1

--- a/anvil.yaml
+++ b/anvil.yaml
@@ -160,7 +160,7 @@ db_schema:
     server: full
     title: Users
 dependencies: []
-metadata: {description: For Framo BIL, logo_img: 'asset:IKONS/running.svg', title: Aktivitetskonkurranse}
+metadata: {description: For Framo BIL, logo_img: 'asset:walking.svg', title: Aktivitetskonkurranse}
 name: Aktivitet
 package_name: Aktivitet
 renamed: true
