--- a/client_code/Resultat_individuell/form_template.yaml
+++ b/client_code/Resultat_individuell/form_template.yaml
@@ -2,7 +2,7 @@ components:
 - components:
   - layout_properties: {grid_position: 'MTSGUN,FHFTBQ'}
     name: label_1
-    properties: {align: center, text: Individuell resultatliste}
+    properties: {align: center, role: headline, text: Individuell resultatliste}
     type: Label
   - components:
     - layout_properties: {}
@@ -16,7 +16,6 @@ components:
       - {data_key: column_1, expand: false, id: JKSDUP, title: Deltager, width: 364.20001220703125}
       - {data_key: column_2, id: VJQQOR, title: Poeng}
       - {data_key: column_1, expand: false, id: LSHEHV, title: Team, width: 278.5999755859375}
-      - {data_key: column_1, id: VUDOQL, title: Kikk}
     type: DataGrid
   - event_bindings: {click: lukk_button_click}
     layout_properties: {grid_position: 'FACYFA,RKQROA'}
