--- a/client_code/Resultat_individuell/form_template.yaml
+++ b/client_code/Resultat_individuell/form_template.yaml
@@ -1,9 +1,24 @@
 components:
 - components:
-  - layout_properties: {grid_position: 'MTSGUN,FHFTBQ'}
-    name: label_1
-    properties: {align: center, role: headline, text: Individuell resultatliste}
-    type: Label
+  - components:
+    - layout_properties: {grid_position: 'WNEDIZ,WTMWPC'}
+      name: label_1
+      properties: {align: center, role: headline, text: Individuell resultatliste}
+      type: Label
+    - layout_properties: {grid_position: 'EJNBYQ,QSXQYM'}
+      name: label_2
+      properties:
+        align: center
+        font_size: 8
+        spacing:
+          margin: ['0', null, '0', null]
+          padding: ['0', null, '0', null]
+        text: Klikk på øyet for å se en persons aktiviteter
+      type: Label
+    layout_properties: {grid_position: 'TIJDPM,SUCWMV'}
+    name: column_panel_1
+    properties: {}
+    type: ColumnPanel
   - components:
     - layout_properties: {}
       name: resultat_repeat_panel
