Created admin.RowTemplate1 and admin.ItemTemplate2; Edited Loggbok, Resultat_individuell, Resultat_individuell.RowTemplate2, ServerModule1 and 3 more

--- a/client_code/Resultat_individuell/form_template.yaml
+++ b/client_code/Resultat_individuell/form_template.yaml
@@ -20,6 +20,9 @@ components:
     properties: {}
     type: ColumnPanel
   - components:
+    - name: button_1
+      properties: {text: button_1}
+      type: Button
     - layout_properties: {}
       name: resultat_repeat_panel
       properties: {item_template: Resultat_individuell.RowTemplate2}
