--- a/client_code/admin/form_template.yaml
+++ b/client_code/admin/form_template.yaml
@@ -29,6 +29,11 @@ components:
       name: button_5
       properties: {role: tonal-button, text: Endringslogg}
       type: Button
+    - event_bindings: {click: ai_click}
+      layout_properties: {}
+      name: ai
+      properties: {role: tonal-button, text: AI}
+      type: Button
     - event_bindings: {click: button_3_click}
       layout_properties: {}
       name: button_3
@@ -258,6 +263,27 @@ components:
     layout_properties: {grid_position: 'NWYMHD,ASANKT'}
     name: konk_card
     properties: {role: tonal-card, visible: true}
+    type: ColumnPanel
+  - components:
+    - components:
+      - components:
+        - name: ai_repeating_panel_1
+          properties: {item_template: admin.RowTemplate1}
+          type: RepeatingPanel
+        layout_properties: {grid_position: 'SMZMTL,VFQVPH'}
+        name: data_grid_3
+        properties:
+          columns:
+          - {data_key: column_1, expand: false, id: JKSDUP, title: AI prompt, width: 747.333251953125}
+          - {data_key: column_2, id: VJQQOR, title: ''}
+        type: DataGrid
+      layout_properties: {grid_position: 'JFYJVW,NOOXLH'}
+      name: outlined_card_5
+      properties: {role: outlined-card}
+      type: ColumnPanel
+    layout_properties: {grid_position: 'GGATNX,TQRQNU'}
+    name: ai_card
+    properties: {role: outlined-card, visible: false}
     type: ColumnPanel
   layout_properties: {grid_position: 'DJZTTS,OKSYEP'}
   name: outlined_card_1
