--- a/client_code/Resultat_individuell/form_template.yaml
+++ b/client_code/Resultat_individuell/form_template.yaml
@@ -28,7 +28,7 @@ components:
     name: data_grid_1
     properties:
       columns:
-      - {data_key: column_1, expand: false, id: JKSDUP, title: Deltager, width: 364.20001220703125}
+      - {data_key: column_1, expand: false, id: JKSDUP, title: Deltager, width: 269}
       - {data_key: column_2, id: VJQQOR, title: Poeng}
       - {data_key: column_1, expand: false, id: LSHEHV, title: Team, width: 278.5999755859375}
     type: DataGrid
