--- a/client_code/admin/form_template.yaml
+++ b/client_code/admin/form_template.yaml
@@ -24,15 +24,14 @@ components:
       name: konk_button
       properties: {role: tonal-button, text: Konkurranse}
       type: Button
+    - event_bindings: {click: ai_click}
+      name: ai
+      properties: {role: tonal-button, text: AI}
+      type: Button
     - event_bindings: {click: button_5_click}
       layout_properties: {}
       name: button_5
       properties: {role: tonal-button, text: Endringslogg}
-      type: Button
-    - event_bindings: {click: ai_click}
-      layout_properties: {}
-      name: ai
-      properties: {role: tonal-button, text: AI}
       type: Button
     - event_bindings: {click: button_3_click}
       layout_properties: {}
@@ -300,7 +299,7 @@ components:
       type: ColumnPanel
     layout_properties: {grid_position: 'GGATNX,TQRQNU'}
     name: ai_card
-    properties: {role: outlined-card, visible: true}
+    properties: {role: outlined-card, visible: false}
     type: ColumnPanel
   layout_properties: {grid_position: 'DJZTTS,OKSYEP'}
   name: outlined_card_1
