--- a/client_code/Resultat_individuell/RowTemplate2/form_template.yaml
+++ b/client_code/Resultat_individuell/RowTemplate2/form_template.yaml
@@ -48,6 +48,15 @@ components:
     spacing:
       margin: ['0', null, '0', null]
   type: FlowPanel
+- data_bindings:
+  - {code: '', property: text, writeback: false}
+  layout_properties: {column: ZPQDNV}
+  name: streak_label
+  properties:
+    spacing:
+      margin: ['12', null, '2', null]
+      padding: ['2', null, '2', null]
+  type: Label
 container:
   properties:
     align: left
