--- a/client_code/admin/form_template.yaml
+++ b/client_code/admin/form_template.yaml
@@ -9,6 +9,11 @@ components:
     name: flow_panel_2
     properties: {align: center}
     type: FlowPanel
+  - event_bindings: {click: button_6_click}
+    layout_properties: {grid_position: 'ECZCQD,TTICSX'}
+    name: button_6
+    properties: {text: test}
+    type: Button
   - components:
     - event_bindings: {click: brukere_click}
       name: brukere
