Edited Resultat_individuell, Resultat_individuell.RowTemplate2, ServerModule1, Utils and 2 more

--- a/client_code/Resultat_individuell/RowTemplate2/form_template.yaml
+++ b/client_code/Resultat_individuell/RowTemplate2/form_template.yaml
@@ -57,6 +57,10 @@ components:
       margin: ['12', null, '2', null]
       padding: ['2', null, '2', null]
   type: Label
+- layout_properties: {column: PJNLQL}
+  name: score
+  properties: {visible: true}
+  type: Label
 container:
   properties:
     align: left
