--- a/client_code/admin/form_template.yaml
+++ b/client_code/admin/form_template.yaml
@@ -9,11 +9,6 @@ components:
     name: flow_panel_2
     properties: {align: center}
     type: FlowPanel
-  - event_bindings: {click: button_6_click}
-    layout_properties: {grid_position: 'ECZCQD,TTICSX'}
-    name: button_6
-    properties: {text: test}
-    type: Button
   - components:
     - event_bindings: {click: brukere_click}
       name: brukere
@@ -42,6 +37,11 @@ components:
       layout_properties: {}
       name: button_3
       properties: {role: tonal-button, text: Lykkehjul}
+      type: Button
+    - event_bindings: {click: button_6_click}
+      layout_properties: {}
+      name: button_6
+      properties: {role: tonal-button, text: test nightly recalc}
       type: Button
     - event_bindings: {click: button_1_click}
       name: button_1
