--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -4,6 +4,10 @@ components:
     name: label_1
     properties: {role: headline, text: Endringslogg}
     type: Label
+  - layout_properties: {grid_position: 'SXEDQY,XELDVM'}
+    name: text_area_12
+    properties: {text: 16/4 La til Streak og Score. Nattlig oppdatering av streak.}
+    type: TextArea
   - layout_properties: {grid_position: 'RSTXWX,ATBTOS'}
     name: text_area_11
     properties:
@@ -69,6 +73,7 @@ components:
         Slette tomme team hver natt
         Slette team med færre enn tre hver helg
         Markere vinnere i trekningene
+        resultatliste for team bør ta hensyn til teamets lengste streak
     type: TextArea
   - event_bindings: {click: button_1_click}
     layout_properties: {grid_position: 'RUNMFH,GYRFVX'}
