Created gray_badge_transparent_100x100.png, grey badge.png and lykke.png; Edited Loggbok

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,5 +1,8 @@
 unique_ids:
   assets:
+    gray_badge_transparent_100x100.png: '1744793526892789796112052.2401'
+    grey badge.png: '1744793917062500701861484.01294'
+    lykke.png: '1744794185416718979266947.6279'
     lykkehjul.jpg: '174227380325212014709124.972933'
     relax.png: '1743409632679138225943962.50644'
     standard-page.html: FWNBRYTQ5FYKRMFR5TQCDTKGH36EROKJ
