--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -89,7 +89,7 @@ components:
         properties:
           height: 50.79998779296875
           margin: ['0', null, '0', null]
-          source: _/theme/lykkehjul.jpg
+          source: _/theme/lykke.png
         type: Image
       - components:
         - layout_properties: {}
@@ -123,6 +123,39 @@ components:
         align: center
         spacing:
           margin: ['0', null, '0', null]
+      type: FlowPanel
+    - components:
+      - layout_properties: {width: 30}
+        name: image_1
+        properties: {height: '30', source: _/theme/grey badge.png, tooltip: 'Hvordan kan man vinne denne tro?'}
+        type: Image
+      - layout_properties: {width: 30}
+        name: image_2
+        properties: {height: '30', source: _/theme/grey badge.png, tooltip: 'Hvordan kan man vinne denne tro?'}
+        type: Image
+      - layout_properties: {width: 30}
+        name: image_3
+        properties: {height: '30', source: _/theme/grey badge.png, tooltip: 'Hvordan kan man vinne denne tro?'}
+        type: Image
+      - layout_properties: {width: 30}
+        name: image_4
+        properties: {height: '30', source: _/theme/grey badge.png, tooltip: 'Hvordan kan man vinne denne tro?'}
+        type: Image
+      - layout_properties: {width: 30}
+        name: image_5
+        properties: {height: '30', source: _/theme/grey badge.png, tooltip: 'Hvordan kan man vinne denne tro?'}
+        type: Image
+      - layout_properties: {width: 30}
+        name: image_6
+        properties: {height: '30', source: _/theme/grey badge.png, tooltip: 'Hvordan kan man vinne denne tro?'}
+        type: Image
+      - layout_properties: {width: 30}
+        name: image_7
+        properties: {height: '30', source: _/theme/grey badge.png, tooltip: 'Hvordan kan man vinne denne tro?'}
+        type: Image
+      layout_properties: {grid_position: 'FIYLJB,VPKGHN'}
+      name: flow_panel_5
+      properties: {align: center}
       type: FlowPanel
     layout_properties: {grid_position: 'WFKNPD,TTQPQG'}
     name: outlined_card_2
