--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -7,9 +7,11 @@ components:
   - layout_properties: {grid_position: 'SXEDQY,XELDVM'}
     name: text_area_12
     properties:
+      height: 105
       text: |-
         16/4 La til Streak og Score. Nattlig oppdatering av streak.
         Kun redigering av dagens og gårsdagens aktiviteter er tillatt
+        Laget badge placeholdere med hint om hva som kommer
     type: TextArea
   - layout_properties: {grid_position: 'RSTXWX,ATBTOS'}
     name: text_area_11
