--- a/client_code/Login/form_template.yaml
+++ b/client_code/Login/form_template.yaml
@@ -1,3 +1,7 @@
-components: []
+components:
+- layout_properties: {grid_position: 'BAYWBB,ORUZMX'}
+  name: regler_1
+  properties: {}
+  type: form:Regler
 container: {type: ColumnPanel}
 is_package: true
