--- a/client_code/Resultat_individuell/form_template.yaml
+++ b/client_code/Resultat_individuell/form_template.yaml
@@ -24,8 +24,13 @@ components:
       - {data_key: column_1, id: PJNLQL, title: Score}
       - {data_key: column_1, expand: false, id: LSHEHV, title: Team, width: 278.5999755859375}
     type: DataGrid
+  - components: []
+    layout_properties: {grid_position: 'ENBSMS,BKKVBY'}
+    name: column_panel_2
+    properties: {}
+    type: ColumnPanel
   - components:
-    - layout_properties: {grid_position: 'SOTLTL,HZANYT'}
+    - layout_properties: {grid_position: 'QGWPOY,PWVMAI'}
       name: label_2
       properties:
         align: center
@@ -35,7 +40,7 @@ components:
           padding: ['0', null, '0', null]
         text: Klikk på øyet for å se en persons aktiviteter
       type: Label
-    - layout_properties: {grid_position: 'RJVBCH,OZFEGY'}
+    - layout_properties: {grid_position: 'FHRIMM,XYECDR'}
       name: label_2_copy
       properties:
         align: center
@@ -45,7 +50,7 @@ components:
           padding: ['0', null, '0', null]
         text: 'Streak er den lengste ssammehnegnende perioden deltageren har registrert aktivitet hver dag. Dagens aktivitet påvirker ikke streak enda. Streak benyttes for å skille mellom deltagere med ellers like mye poeng. '
       type: Label
-    - layout_properties: {grid_position: 'QOHEIT,GMUFNU'}
+    - layout_properties: {grid_position: 'KEKTFQ,YQCGFF'}
       name: label_2_copy_copy
       properties:
         align: center
@@ -55,9 +60,9 @@ components:
           padding: ['0', null, '0', null]
         text: Score = (poeng x 100) + streak
       type: Label
-    layout_properties: {grid_position: 'ENBSMS,BKKVBY'}
-    name: column_panel_2
-    properties: {}
+    layout_properties: {grid_position: 'UADQNT,KYRNWY'}
+    name: outlined_card_2
+    properties: {role: outlined-card}
     type: ColumnPanel
   - event_bindings: {click: lukk_button_click}
     layout_properties: {grid_position: 'FACYFA,RKQROA'}
