--- a/anvil.yaml
+++ b/anvil.yaml
@@ -50,12 +50,9 @@ db_schema:
     - admin_ui: {width: 200}
       name: icon_gray
       type: string
-    - admin_ui: {width: 200}
+    - admin_ui: {order: 4, width: 256}
       name: icon_color
       type: string
-    - admin_ui: {width: 200}
-      name: order
-      type: number
     - admin_ui: {width: 200}
       name: bonus
       type: number
