--- a/client_code/Resultat_individuell/form_template.yaml
+++ b/client_code/Resultat_individuell/form_template.yaml
@@ -20,15 +20,11 @@ components:
       columns:
       - {data_key: column_1, expand: false, id: JKSDUP, title: Deltager, width: 269}
       - {data_key: column_2, id: VJQQOR, title: Poeng}
+      - {data_key: column_1, id: AHNFPO, title: Bonus}
       - {data_key: column_1, id: ZPQDNV, title: Streak}
       - {data_key: column_1, id: PJNLQL, title: Score}
       - {data_key: column_1, expand: false, id: LSHEHV, title: Team, width: 278.5999755859375}
     type: DataGrid
-  - components: []
-    layout_properties: {grid_position: 'ENBSMS,BKKVBY'}
-    name: column_panel_2
-    properties: {}
-    type: ColumnPanel
   - components:
     - layout_properties: {grid_position: 'QGWPOY,PWVMAI'}
       name: label_2
@@ -50,6 +46,16 @@ components:
           padding: ['0', null, '0', null]
         text: 'Streak er den lengste ssammehnegnende perioden deltageren har registrert aktivitet hver dag. Dagens aktivitet påvirker ikke streak enda. Streak benyttes for å skille mellom deltagere med ellers like mye poeng. '
       type: Label
+    - layout_properties: {grid_position: 'HKNYRD,ECOEGL'}
+      name: label_2_copy_2
+      properties:
+        align: center
+        font_size: 8
+        spacing:
+          margin: ['0', null, '0', null]
+          padding: ['0', null, '0', null]
+        text: Bonus oppnås ved å vinne badges - kravene for disse er hemmelige og dukker opp etter hvert
+      type: Label
     - layout_properties: {grid_position: 'KEKTFQ,YQCGFF'}
       name: label_2_copy_copy
       properties:
@@ -58,7 +64,7 @@ components:
         spacing:
           margin: ['0', null, '0', null]
           padding: ['0', null, '0', null]
-        text: Score = (poeng x 100) + streak
+        text: Score = ((poeng + bonus)  x 100)  + streak
       type: Label
     layout_properties: {grid_position: 'UADQNT,KYRNWY'}
     name: outlined_card_2
