--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -4,6 +4,10 @@ components:
     name: label_1
     properties: {role: headline, text: Endringslogg}
     type: Label
+  - layout_properties: {grid_position: 'YDWXMR,JTPKXU'}
+    name: text_area_13
+    properties: {text: 'La til badges. Foreløpig to aktive badges, men plass til veldig mange. '}
+    type: TextArea
   - layout_properties: {grid_position: 'SXEDQY,XELDVM'}
     name: text_area_12
     properties:
@@ -16,6 +20,7 @@ components:
   - layout_properties: {grid_position: 'RSTXWX,ATBTOS'}
     name: text_area_11
     properties:
+      height: 113.33331298828125
       text: "15/4 La til oppmuntrende skrytekommentar ved innlegging av aktivitet. La til vedlikehold av ai-prompt for skryt i admin. \nLa til at den bare skryter når man legge inn aktivitet for samme dag. Ellers blir det for masete."
     type: TextArea
   - layout_properties: {grid_position: 'YACQLQ,HZIOYW'}
@@ -51,6 +56,7 @@ components:
   - layout_properties: {grid_position: 'TNZNYY,DKGSDY'}
     name: text_area_3
     properties:
+      height: 101.33331298828125
       text: "30/3: La til ikon for aktivitet\nLa til beskrivelse av aktivitet. Den vises som tooltip når musen er over en dag. Vises ikek på mobil da den ikke har mus. "
     type: TextArea
   - layout_properties: {grid_position: 'ILDDNC,ZIRYPF'}
@@ -77,8 +83,11 @@ components:
         Bør kunne redigere en dag ved å klikke hvor som helst i dagen, ikke bare på poengtallet.
         Slette tomme team hver natt
         Slette team med færre enn tre hver helg
-        Markere vinnere i trekningene
+        Registrere vinnere i databasen for at AI skal vite det
         resultatliste for team bør ta hensyn til teamets lengste streak
+        Flere badges
+        Legge til bonuspoeng i resultatliste. Vise badges på resultatlister og på kikk-bildet
+        Legge til Ligaer
     type: TextArea
   - event_bindings: {click: button_1_click}
     layout_properties: {grid_position: 'RUNMFH,GYRFVX'}
