--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -157,8 +157,8 @@ components:
         properties: {height: '30', source: _/theme/grey badge.png, tooltip: '', visible: false}
         type: Image
       layout_properties: {grid_position: 'FIYLJB,VPKGHN'}
-      name: flow_panel_5
-      properties: {align: center}
+      name: badge_flow_panel
+      properties: {align: center, visible: false}
       type: FlowPanel
     layout_properties: {grid_position: 'WFKNPD,TTQPQG'}
     name: outlined_card_2
