Created Login; Edited settings and Loggbok; Deleted Login_slett

--- a/anvil.yaml
+++ b/anvil.yaml
@@ -239,5 +239,5 @@ services:
 - client_config: {}
   server_config: {}
   source: /runtime/services/anvil/secrets.yml
-startup: {module: Loggbok, type: form}
+startup: {module: Login, type: form}
 startup_form: null
